<?xml version="1.0"?>
<package format="2">
  <name>elevation_mapping_gazebo</name>
  <version>0.0.0</version>
  <description>The elevation_mapping_gazebo package</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
